--- a/utils/bazel/torch-mlir-overlay/BUILD.bazel
+++ b/utils/bazel/torch-mlir-overlay/BUILD.bazel
@@ -172,6 +172,7 @@ cc_library(
         "lib/Dialect/Torch/Transforms/EraseModuleInitializer.cpp",
         "lib/Dialect/Torch/Transforms/GlobalizeObjectGraph.cpp",
         "lib/Dialect/Torch/Transforms/InlineGlobalSlots.cpp",
+        "lib/Dialect/Torch/Transforms/LowerToBackendContract.cpp",
         "lib/Dialect/Torch/Transforms/MaximizeValueSemantics.cpp",
         "lib/Dialect/Torch/Transforms/Passes.cpp",
         "lib/Dialect/Torch/Transforms/PrepareForGlobalizeObjectGraph.cpp",
