--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,8 +45,10 @@ option(TORCH_MLIR_ENABLE_LTC "Enables LTC backend" OFF)
 
 if(TORCH_MLIR_ENABLE_LTC)
     set(ENV{TORCH_MLIR_ENABLE_LTC} 1)
+    message(STATUS "LTC Backend build is enabled")
 else()
     set(ENV{TORCH_MLIR_ENABLE_LTC} 0)
+    message(STATUS "LTC Backend build is disabled")
 endif()
 
 torch_mlir_add_llvm_external_project(
