--- a/utils/bazel/WORKSPACE.bazel
+++ b/utils/bazel/WORKSPACE.bazel
@@ -3,15 +3,15 @@
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
 http_archive(
     name = "bazel_skylib",
+    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
     urls = [
         "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
         "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
     ],
-    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
 )
-load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
 
 load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
 
@@ -26,30 +26,30 @@ new_local_repository(
 load("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure", "llvm_disable_optional_support_deps")
 
 llvm_configure(
-  name = "llvm-project",
-  repo_mapping = {
-    "@python_runtime": "@local_config_python",
-  },
-  targets = [
-      "X86",
-  ]
+    name = "llvm-project",
+    repo_mapping = {
+        "@python_runtime": "@local_config_python",
+    },
+    targets = [
+        "X86",
+    ],
 )
+
 llvm_disable_optional_support_deps()
 
-
 local_repository(
-  name = "mlir-hlo",
-  path = "../../externals/mlir-hlo/"
+    name = "mlir-hlo",
+    path = "../../externals/mlir-hlo/",
 )
 
 new_local_repository(
     name = "torch-mlir-raw",
     build_file_content = "# empty",
-    path = "../../"
+    path = "../../",
 )
 
 load("@torch-mlir-raw//utils/bazel:configure.bzl", "torch_mlir_configure")
 
 torch_mlir_configure(
-  name = "torch-mlir"
+    name = "torch-mlir",
 )
