Build LTC to _mlir_libs directory

--- a/python/torch_mlir/csrc/reference_lazy_backend/CMakeLists.txt
+++ b/python/torch_mlir/csrc/reference_lazy_backend/CMakeLists.txt
@@ -26,7 +26,7 @@ mlir_configure_python_dev_packages()
 # Library definition
 ###########################################################################
 
-set(LIBRARY_OUTPUT_PATH  "${TORCH_MLIR_PYTHON_PACKAGES_DIR}/torch_mlir/torch_mlir/reference_lazy_backend")
+set(LIBRARY_OUTPUT_PATH  "${TORCH_MLIR_PYTHON_PACKAGES_DIR}/torch_mlir/torch_mlir/_mlir_libs")
 set(OUTPUT_NAME "_REFERENCE_LAZY_BACKEND")
 
 if(TORCH_MLIR_ENABLE_LTC)
@@ -64,6 +64,10 @@ if(TORCH_MLIR_ENABLE_LTC)
           CXX_VISIBILITY_PRESET "hidden"
           COMPILE_FLAGS "${TORCH_CXXFLAGS} -Wno-pedantic"
           )
+  mlir_python_setup_extension_rpath(reference_lazy_backend)
+
+  torch_mlir_python_target_compile_options(reference_lazy_backend)
+  mlir_check_all_link_libraries(reference_lazy_backend)
 else()
   # To avoid import errors when LTC is disabled (and a bunch of checks
   # associated with that), we will generate a dummy placeholder library.
