--- a/build_tools/autogen_ltc_backend.yaml
+++ b/build_tools/autogen_ltc_backend.yaml
@@ -19,6 +19,7 @@ blacklist:
 - new_empty
 - rsub
 - slice.Tensor  # Disabled in favour of slice_copy.Tensor
+- zeros
 
 # Disabled in favour of functionalized alternatives
 - _reshape_alias
@@ -59,14 +60,12 @@ supported:
 # but their implementations call view operators (which we need to functionalize away).
 - block_diag
 - new_empty_strided
-- narrow_copy
 - pixel_shuffle
 - pixel_unshuffle
 - select_backward
 - slice_backward
 - diagonal_backward
 - _trilinear
-- linalg_inv_ex
 - linalg_pinv.atol_rtol_tensor
 - logsumexp.out
 
