Add some missing dependencies.
Caught in the wild here:
https://github.com/llvm/torch-mlir/runs/8046660640?check_suite_focus=true

It is common for a missing dependency to only surface as an issue on the
CI machines since they have fewer cores which prevents a "race" that
happens to cause the dependency to be built before the dependent.

--- a/lib/Conversion/Utils/CMakeLists.txt
+++ b/lib/Conversion/Utils/CMakeLists.txt
@@ -3,4 +3,9 @@ add_mlir_conversion_library(TorchMLIRConversionUtils
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Conversion/Utils
+
+  LINK_LIBS PUBLIC
+  MLIRArithmeticDialect
+  MLIRLinalgDialect
+  TorchMLIRTorchDialect
 )
